# MFModeller

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/mfmodeller/plotting/: mf_style.py
src/mfmodeller/test_functions/: __init__.py  base_test_function.py  helpers.py  synthetic_test_functions.py
